Fixed a bug where sidebar would collapse if another layer was clicked

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 #map {
-    width: 75%;
+    width: 100%;
     height:100%;
     position: absolute;
     right: 0px;
@@ -19,7 +19,7 @@ html, body {
 }
 
 #wrapper {
-    padding-left: 25%;
+    /*padding-left: 20%;*/
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -31,7 +31,6 @@ html, body {
     z-index: 1000;
     top: 50%;
     border-color: red;
-
 
 }
 
@@ -53,8 +52,8 @@ html, body {
 /* Sidebar */
 #sidebar-wrapper {
     margin-left: -250px;
-    /*left: 250px;*/
-    width: 25%;
+    left: 20%;
+    width: 0%;
     background: white;
     position: fixed;
     height: 100%;
@@ -64,14 +63,15 @@ html, body {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    //padding: 20px;
+    /*padding: 20px;*/
+
 }
 
 #sidebar-wrapper2 {
     /*margin-left: -250px;*/
-    /*left: 250px;*/
-    width: 25%;
-    background: white;
+    left: 20%;
+    width: 0%;
+    background: red;
     position: fixed;
     height: 100%;
     overflow-y: auto;
@@ -80,8 +80,12 @@ html, body {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-//padding: 20px;
+    /*padding: 20px;*/
 
+}
+
+#suburb-id {
+    transition-delay: 0.5s;
 }
 
 /* Page Content */
@@ -97,13 +101,18 @@ html, body {
 }
 
 #wrapper.showSidebar #sidebar-wrapper {
-    width: 25%;
+    width: 20%;
+    padding: 20px;
 }
 
 #wrapper.showSidebar #map {
-    width: 75%;
+    width: 80%;
 }
 
+#wrapper.compareChecked #sidebar-wrapper2 {
+    width: 20%;
+    padding: 20px;
+}
 .sidebar-nav {
     position: absolute;
     top: 0;
